  permissions, unmapping, moving to another location, or shrinking the size.

* The loader will memory seal all libraries that contains the new gnu
  attribute GNU_PROPERTY_MEMORY_SEAL.  The memory sealing uses the new Linux
  mseal syscall, and it will be applied to all shared libraries dependencies,
  the binary, any preload and audit modules, and aby library loaded with
  RTLD_NODELETE.

Deprecated and removed features, and other changes affecting compatibility:

  [Add deprecations, removals and changes affecting compatibility here]

Changes to build and runtime requirements:

  [Add changes to build and runtime requirements here]

Security related changes:

The following CVEs were fixed in this release, details of which can be
found in the advisories directory of the release tarball:

  [The release manager will add the list generated by
  scripts/process-advisories.sh just before the release.]

The following bugs were resolved with this release:

  [The release manager will add the list generated by
  scripts/list-fixed-bugs.py just before the release.]

Version 2.41

Major new features:

* Support for testing a glibc build with a set of C and C++ compilers
  different from the C and C++ compilers used to build glibc has been
  added:
  $ ../configure TEST_CC="gcc-6.4.1" TEST_CXX="g++-6.4.1"

  This includes support for testing the glibc build with Clang, e.g.,
  $ ../configure TEST_CC="clang" TEST_CXX="clang++"

  Some run-time failures with Clang are expected.

* The glibc test suite has been extended again significantly, with now
  6232 separate tests compared to 5408 in glibc-2.40.

* In /etc/resolv.conf and the RES_OPTIONS environment variable, option
  flags can now be prefixed with “-” to clear previously set flags.
  For example, if /etc/resolv.conf contains “options no-aaaa”, a
  process running with the RES_OPTIONS=-no-aaaa environment variable
  performs AAAA DNS queries when the glibc DNS stub resolver is used.
